# CheckPoint-9

./: .gitignore
attach_shelf/: CMakeLists.txt  package.xml
attach_shelf/launch/: attach_to_shelf.launch.py  pre_approach.launch.xml
attach_shelf/src/: approach_service_server.cpp  pre_approach.cpp  pre_approach_v2.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/attach_shelf/share/attach_shelf/: package.bash  package.zsh
log/: latest_build
